# OpenGL_basics_crossplatform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  patch_dll.ps1  setup.ps1  setup.sh  setup_ios.sh  setup_macos.sh  setup_windows.ps1
.github/workflows/: build.yml
00_probe_OpenGLES2/: CMakeLists.txt  main.cpp  meson.build  probe.cpp
01_hello_triangle_SDL2/: CMakeLists.txt  main.cpp  meson.build
02_triangle_color_attribute/: CMakeLists.txt  main.cpp  meson.build
03_transform/: CMakeLists.txt  main.cpp  meson.build
04_imgui/: CMakeLists.txt  main.cpp  meson.build
